--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
 <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📖</text></svg>">
 <title>Testing GitHub</title>
 <style>
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 	body {
-		font-family: 
+		font-family: 'Roboto Mono', monospace;
+		text-align: center;
+		margin: 50 auto;
+		zoom: 1.5;
+
 	}
-	
+	h1 {color: black;}
+	p {color: #555;}
 
 </style>
 
 <h1>EFTEGARIE</h1>
+<br>
+
+<p>I'm just fucking around with GitHub Pages</p>
