--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!-- no caching please!! tired of the 1min delay between pushing and changes showing up on github pages -->
+<meta http-equiv='cache-control' content='no-cache'> 
+<meta http-equiv='expires' content='0'> 
+<meta http-equiv='pragma' content='no-cache'>
+
+
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📖</text></svg>">
@@ -21,3 +27,5 @@
 <br>
 
 <p>I'm just fucking around with GitHub Pages</p>
+
+test123
