--- a/index.html
+++ b/index.html
@@ -1,22 +1,61 @@
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📖</text></svg>">
-<title>Testing GitHub</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😢</text></svg>">
+
+<title>Reject By Y-Combinator</title>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
 	body {
 		font-family: 'Roboto Mono', monospace;
+		margin: 0 auto;
 		text-align: center;
-		margin: 50 auto;
-		zoom: 1.5;
-
 	}
-	h1 {color: black;}
-	p {color: #555;}
-
+	
+	nav {
+		background: #ff6600;
+		text-align: center;
+		padding: 3px;
+	}
+	
+	.company {
+		background: #d4d4d4;
+		padding: 5px 0px 5 10px;
+		cursor: pointer;
+		width: fit-content;
+		margin: 20px auto;
+	}
+	.company:after {
+		content: "+";
+		background: cyan;
+		padding: 5px 10px;
+		margin-left: 15px;
+	}
+	
+	.company:hover {
+		background: yellow;
+	}
+	
+	#add {
+		position: absolute;
+		top: 0px;
+		right: 0px;
+		background: #ff6600;
+		height: 79px;
+		width: 70px;
+		line-height: 79px;
+		border-left: 1px dashed white;
+		color: white;
+		font-size: 3rem;
+	}
 </style>
 
-<h1>EFTEGARIE</h1>
+<nav><h1>Rejected By Y-Combinator 😢</h1> <span id="add">+</span></nav>
 <br>
-<p>I'm just fucking around with GitHub Pages</p>
+<h3>Interesting stories from those who didn't make it</h3>
+<br><br>
+
+<div class="company">Wordo Dictionary</div>
+<div class="company">VEED Video</div>
+<div class="company">Pajeet Technologies</div>
