--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😢</text></svg>">
 
-<title>Reject By Y-Combinator</title>
+<title>Rejected By Y-Combinator</title>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
@@ -48,6 +48,13 @@
 		border-left: 1px dashed white;
 		color: white;
 		font-size: 3rem;
+	}
+	
+	/* MOBILE */
+	@media (max-width: 700px) {
+		nav {
+			zoom: 0.8;
+		}
 	}
 </style>
 
