--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 		font-family: 'Roboto Mono', monospace;
 		margin: 0 auto;
 		text-align: center;
+		background: #f6f6ef;
+		text-shadow: 1px 1px white;
 	}
 	
 	nav {
 		background: #ff6600;
 		text-align: center;
 		padding: 3px;
+		text-shadow: none;
 	}
 	
 	.company {
@@ -25,6 +28,8 @@
 		cursor: pointer;
 		width: fit-content;
 		margin: 20px auto;
+		font-weight: bolder;
+		letter-spacing: 1px;
 	}
 	.company:after {
 		content: "+";
@@ -57,7 +62,7 @@
 <h3>Interesting stories from those who didn't make it</h3>
 <br>
 
-<div class="company" id="add">Add your story</div><br>
+<div class="company" id="add">Submit your story</div><br>
 
 <div class="company">Wordo Dictionary</div>
 <div class="company">VEED Video</div>
