--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😢</text></svg>">
+<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💀</text></svg>">
 <title>Rejected By Y-Combinator</title>
 
 <style>
@@ -113,6 +113,7 @@ nav {
 	text-align: justify;
 	padding: 20px 18px;
 	opacity: 1;
+	margin-top: -16px;
 	max-height: 5000px; /* Whatever you like, as long as its more than the height of the content (on all screen sizes) */
 }
 .madeby {
@@ -135,18 +136,14 @@ nav {
 }
 </style>
 
-
-<nav><h1>Rejected By Y-Combinator 😢</h1></nav>
-
-
-<br>
-<h3>Interesting stories from those who didn't make it</h3>
-<br>
+<nav><h1>Rejected By Y-Combinator 💀</h1></nav>
+<br><br>
+<div id="container">
+<h2>Interesting stories from those who didn't make it</h2>
+<small>Each year, over ten thousand people are rejected by Y-Combinator. This akin to a technological holocaust. It's about time we listened to their stories.</small>	
 
 <div class="company" id="add">Submit your story</div><br>
-
-<div id="container">
-
+	
 <p class="accordion">Wordo Dictionary</p>
 <div class="panel">
 🔗 <a href="https://wor.do">https://wor.do</a>
