--- a/index.html
+++ b/index.html
@@ -118,8 +118,23 @@ nav {
 }
 .madeby {
 	font-size: 0.85rem;
-	padding: 5px 10px;
-	text-align: center;
+    padding: 5px 10px;
+    text-align: center;
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    background: white;
+    border: 1px dashed lightgray;
+	cursor: pointer;
+	color: black;
+}
+.madeby u {
+	color: #ff6600;
+}
+.madeby:hover {border: 1px dashed #ff6600;}
+.madeby:hover u {
+	color: #d04800;
+
 }
 
 	
@@ -188,9 +203,9 @@ Children should at least have the right to speedy permanency, and should not be 
 
 There is also a lot to be said for separating child welfare laws from family laws. I mention that because in many states we end up with divorce law that bleeds into welfare cases, specifically regarding visitation of children with parents, even physically or sexually abusive ones out of fear that a TPR may be overturned.</div>
 
-<div class="madeby">Made for fun<br>by <a href="https://twitter.com/aminozuur" target="_blank">@aminozuur</a></div>
+<a href="https://twitter.com/aminozuur" target="_blank"><div class="madeby">Made in quarantine<br>by <u>@aminozuur</u></div></a>
 
-
+	
 </div>
 
 <script>
