--- a/index.html
+++ b/index.html
@@ -162,47 +162,45 @@ nav {
 	
 <p class="accordion">Wordo Dictionary</p>
 <div class="panel">
-🔗 <a href="https://wor.do">https://wor.do</a>
+🔗 &nbsp; <a href="https://wor.do">https://wor.do</a>
 <br><br>
 <b>What does your company do?</b><br>
-Not to be obtuse, but some would say you're reversing cause and effect -- that the $10k and exhaustive background checks are the reasons that adoption has better success rates. I couldn't be less of an expert, but it's hard for me to imagine that the solution is as simple as "adoption is always better."
+Answer here.
 <br><br>
 <b>Any guess on why you got rejected?</b><br>
-It does absolutely seem like there are many wonderful homes out there who aren't able to adopt because they aren't quite well-off enough, or the couple is gay, or some other factor that a reasonable person could look at and say "this shouldn't disqualify you from adopting."
+Fascinating response here.<br><br>
 
+<b>How did you react to Y-Combinator rejecting you</b><br>
+I became suicidal.
 </div>
 
 <p class="accordion">VEED Video</p>
-<div class="panel">50ish percent of all reunified children in the state of Georgia are back in care in less than a year.
-There is no data available for total recidivism, but I would more than guess that the vast majority of the negative outcome foster stats come primarily from multi-cycle children. Meaning they go in to care, get reunified, then go back in care, and wash and repeat. Tada we are at 16 years and the trauma fruit of "family preservation" policy is ripe for the picking.
+<div class="panel">
+🔗 &nbsp; <a href="https://wor.do">https://wor.do</a>
 <br><br>
+<b>What does your company do?</b><br>
+Answer here.
+<br><br>
+<b>Any guess on why you got rejected?</b><br>
+Fascinating response here.<br><br>
 
-"Family preservation" is the pervert uncle of a mantra that is the anchor that has dragged foster care outcomes down for decades. Supported by the "evidence based policy" con that has been propagated by services companies.<br><br>
-
-I have not had a child in my home that was not the victim of the family preservation cult. In case you don't know, let me explain the toxic buck passing shit storm of terrible that family preservation programs are.<br><br>
-
-This practice is the plan of taking child neglect cases and not removing children, but assigning a social worker to write a safe plan, such as parent can have no contact and child must live with grand parent that lives in the same house as the parent. Then when that fails 90 day later(80%), we do it again and wait 90 days, and then we wait 90 days, and then maybe we remove the children from the then child cruelty or child endangerment case. Then the charges, which have no impact on the permanency case for the child are usually dropped.<br><br>
-
-We then reunify the children after 12-18 months, and then start the 270 day safe plan again after 6 months or so, and then place the children in care, and then reunify after 12-18 months and then start all over. So all of the people that are telling the kids that they are there to help just keep placing children back with the parent that has demonstrated over 2.5 years at first reunification, their in ability to provide for the child.</div>
+<b>How did you react to Y-Combinator rejecting you</b><br>
+I became suicidal.
+</div>
 
 <p class="accordion">Pajeet Technologies</p>
-<div class="panel">There is no data available for total recidivism, but I would more than guess that the vast majority of the negative outcome foster stats come primarily from multi-cycle children. Meaning they go in to care, get reunified, then go back in care, and wash and repeat. Tada we are at 16 years and the trauma fruit of "family preservation" policy is ripe for the picking.<br><br>
+<div class="panel">
+🔗 &nbsp; <a href="https://wor.do">https://wor.do</a>
+<br><br>
+<b>What does your company do?</b><br>
+Answer here.
+<br><br>
+<b>Any guess on why you got rejected?</b><br>
+Fascinating response here.<br><br>
 
-"Family preservation" is the pervert uncle of a mantra that is the anchor that has dragged foster care outcomes down for decades. Supported by the "evidence based policy" con that has been propagated by services companies.<br><br>
-
-I have not had a child in my home that was not the victim of the family preservation cult. In case you don't know, let me explain the toxic buck passing shit storm of terrible that family preservation programs are.<br><br>
-
-This practice is the plan of taking child neglect cases and not removing children, but assigning a social worker to write a safe plan, such as parent can have no contact and child must live with grand parent that lives in the same house as the parent. Then when that fails 90 day later(80%), we do it again and wait 90 days, and then we wait 90 days, and then maybe we remove the children from the then child cruelty or child endangerment case. Then the charges, which have no impact on the permanency case for the child are usually dropped.<br><br>
-
-We then reunify the children after 12-18 months, and then start the 270 day safe plan again after 6 months or so, and then place the children in care, and then reunify after 12-18 months and then start all over. So all of the people that are telling the kids that they are there to help just keep placing children back with the parent that has demonstrated over 2.5 years at first reunification, their in ability to provide for the child.<br><br>
-
-This legal/policy structure allows for children to exist in a grossly traumatic cycle of permeant psychological and physical damage. This is a legal problem and not a foster care problem.<br><br>
-
-So much of the entire legal system is structured around 'reunify at all cost' that children simply pay all the risk cost of the second chances that bio parents are given. For this type of "justice" that is propagated by people that have no experience or non-"academic" knowledge of long term trauma in children.<br><br>
-
-Children should at least have the right to speedy permanency, and should not be forced to dole out second chances to bio parents that they can never get back. You only get one chance to by 5 or 4 or 3 or 2.<br><br>
-
-There is also a lot to be said for separating child welfare laws from family laws. I mention that because in many states we end up with divorce law that bleeds into welfare cases, specifically regarding visitation of children with parents, even physically or sexually abusive ones out of fear that a TPR may be overturned.</div>
+<b>How did you react to Y-Combinator rejecting you</b><br>
+I became suicidal.
+</div>
 
 <a href="https://twitter.com/aminozuur" target="_blank"><div class="madeby">Made in quarantine <br> by <u>@aminozuur</u></div></a>
 
