--- a/index.html
+++ b/index.html
@@ -3,6 +3,26 @@
 <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💀</text></svg>">
 <title>Rejected By Y-Combinator</title>
 
+<!-- Primary Meta Tags -->
+<title>Rejected By Y-Combinator: Interesting stories from those who didn't make it</title>
+<meta name="title" content="Rejected By Y-Combinator: Interesting stories from those who didn't make it">
+<meta name="description" content="A directory website for rejected YC companies, including fascinating stories, links, and more.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://rejectedbyycombinator.com/">
+<meta property="og:title" content="Rejected By Y-Combinator: Interesting stories from those who didn't make it">
+<meta property="og:description" content="A directory website for rejected YC companies, including fascinating stories, links, and more.">
+<meta property="og:image" content="rejected-by-ycombinator.jpg">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://rejectedbyycombinator.com/">
+<meta property="twitter:title" content="Rejected By Y-Combinator: Interesting stories from those who didn't make it">
+<meta property="twitter:description" content="A directory website for rejected YC companies, including fascinating stories, links, and more.">
+<meta property="twitter:image" content="rejected-by-ycombinator.jpg">
+<!-- End metatags -->
+
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
