--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <meta property="twitter:url" content="https://rejectedbyycombinator.com/">
 <meta property="twitter:title" content="Rejected By Y-Combinator: Interesting stories from those who didn't make it">
 <meta property="twitter:description" content="A directory website for rejected YC companies, including fascinating stories, links, and more.">
-<meta property="twitter:image" content="rejected-by-ycombinator.jpg">
+<meta property="twitter:image" content="rejected-by-ycombinator-tw.jpg">
+<meta name="twitter:creator" content="@aminozuur" />
 <!-- End metatags -->
 
 <style>
