--- a/index.html
+++ b/index.html
@@ -77,13 +77,18 @@ nav {
 	background: yellow;
 }
 #add {
-	background: springgreen; padding: 20px;
+	background: #0ada71;
+    padding: 10px 30px;
+    margin: 10px auto;
+    margin-bottom: -10px;
+    color: white;
+    text-shadow: 1px 1px green;
 }
 #add::after {
 	content: ""; background: inherit; padding: 0;
 }
 
-#add:hover {background: lawngreen;}
+#add:hover {background: #07b95f;}
 
 .accordion {
 	font-weight: bolder;
