--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@aminozuur">
 <meta property="twitter:url" content="https://rejectedbyycombinator.com/">
 <meta property="twitter:title" content="Rejected By Y-Combinator: Interesting stories from those who didn't make it">
 <meta property="twitter:description" content="A directory website for rejected YC companies, including fascinating stories, links, and more.">
