--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://rejectedbyycombinator.com/">
 <meta property="og:title" content="Rejected By Y-Combinator: Interesting stories from those who didn't make it">
 <meta property="og:description" content="A directory website for rejected YC companies, including fascinating stories, links, and more.">
-<meta property="og:image" content="http://rejectedbyycombinator.com/rejected-by-ycombinator.jpg">
+<meta property="og:image" content="https://rejectedbyycombinator.com/rejected-by-ycombinator.jpg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
