--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <meta property="twitter:url" content="https://rejectedbyycombinator.com/">
 <meta property="twitter:title" content="Rejected By Y-Combinator: Interesting stories from those who didn't make it">
 <meta property="twitter:description" content="A directory website for rejected YC companies, including fascinating stories, links, and more.">
-<meta property="twitter:image" content="http://rejectedbyycombinator.com/rejected-by-ycombinator-tw.jpg">
+<meta property="twitter:image" content="https://rejectedbyycombinator.com/rejected-by-ycombinator-tw.jpg">
 <meta name="twitter:creator" content="@aminozuur" />
 <!-- End metatags -->
 
