--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ nav {
 <br><br>
 <div id="container">
 <h2>Interesting stories from those who didn't make it</h2>
-<small>Each year, over ten thousand people are rejected by Y-Combinator. This akin to a technological holocaust. It's about time we listened to their stories.</small>	
+<small>Each year, over ten thousand people are rejected by Y-Combinator. This page is a directory that collects their stories, so that we can learn from each other.</small>	
 
 <div class="company" id="add">Submit your story</div><br>
 	
