--- a/index.html
+++ b/index.html
@@ -96,12 +96,13 @@ nav {
     background-color: #d4d4d4;
     color: #444;
     cursor: pointer;
-    padding: 18 0 18 18;
+    padding: 10 0 10 18;
     width: fit-content;
     text-align: left;
     border: none;
     outline: none;
     transition: 0.2s;
+	margin: 5px 0px;
 }
 
 /* Add a background color to the accordion if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
@@ -113,7 +114,7 @@ nav {
 .accordion:after {
 	content: "+";
     background: #ff6600;
-    padding: 18px 15px;
+    padding: 10px 15px;
     margin-left: 15px;
 	text-shadow: none;
 	color: white;
@@ -145,7 +146,7 @@ nav {
 	text-align: justify;
 	padding: 20px 18px;
 	opacity: 1;
-	margin-top: -16px;
+	margin-top: -5px;
 	max-height: 5000px; /* Whatever you like, as long as its more than the height of the content (on all screen sizes) */
 }
 .madeby {
