--- a/index.html
+++ b/index.html
@@ -171,8 +171,16 @@ nav {
 
 }
 #howtoadd {
-	background: yellow;
+	background: palegreen;
+    padding: 10px;
+	text-shadow: none;
+	font-weight: 600;
 }
+	textarea {
+		width: 90%;
+		height: 250px;
+		padding: 10px;
+	}
 	
 /* MOBILE */
 @media (max-width: 700px) {
@@ -199,7 +207,19 @@ nav {
 
 <div class="company" id="add" onclick="submitToggle()">Submit your story</div><br>
 <div id="howtoadd">
-To add your company, just fill out this form, and copy+paste it into my Twitter DM's. I will then add your company.
+To add your company, just fill out this form, and copy+paste it into my Twitter DM's. I will then add your company.<br><br>
+<textarea>
+What does your project or company do? (1 or 2 sentences please)
+
+What did you hope to get out of getting into YC?
+
+How did you take the rejection?
+
+How did your company went on to do without YC?
+
+Any interesting story regarding your company you’d like to share?
+
+</textarea>
 </div>
 	
 <p class="accordion">Wordo Dictionary</p>
