--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@ nav {
 }
 #howtoadd {
 	background: palegreen;
-    padding: 10px;
+    padding: 20px 10px;
 	text-shadow: none;
-	font-weight: 600;
 }
+	#howtoadd a {color: blue;}
 	textarea {
 		width: 90%;
 		height: 250px;
@@ -208,18 +208,26 @@ nav {
 <div class="company" id="add" onclick="submitToggle()">Submit your story</div><br>
 <div id="howtoadd">
 To add your company, just fill out this form, and copy+paste it into my Twitter DM's. I will then add your company.<br><br>
+<b>Step 1: Share your story 👇🏽</b>
 <textarea>
 What does your project or company do? (1 or 2 sentences please)
 
+	
 What did you hope to get out of getting into YC?
 
+	
 How did you take the rejection?
 
+	
 How did your company went on to do without YC?
 
+	
 Any interesting story regarding your company you’d like to share?
 
 </textarea>
+<br><br>
+<b>Step 2: Send it to me 👇🏽</b><br>
+<a href="https://twitter.com/aminozuur" target="_blank">DM me on Twitter</a> or email it to amin@eftegarie.com.
 </div>
 	
 <p class="accordion">Wordo Dictionary</p>
