--- a/index.html
+++ b/index.html
@@ -174,13 +174,14 @@ nav {
 	background: palegreen;
     padding: 20px 10px;
 	text-shadow: none;
+	border-radius: 20px;
 }
-	#howtoadd a {color: blue;}
-	textarea {
-		width: 90%;
-		height: 250px;
-		padding: 10px;
-	}
+#howtoadd a {color: blue;}
+textarea {
+	width: 90%;
+	height: 300px;
+	padding: 10px;
+}
 	
 /* MOBILE */
 @media (max-width: 700px) {
@@ -228,6 +229,9 @@ Any interesting story regarding your company you’d like to share?
 <br><br>
 <b>Step 2: Send it to me 👇🏽</b><br>
 <a href="https://twitter.com/aminozuur" target="_blank">DM me on Twitter</a> or email it to amin@eftegarie.com.
+<br><br>
+<b>Step 3 is optional, this is NOT a requirement: Add a banner to your website 👇🔥🔥</b><br>
+
 </div>
 	
 <p class="accordion">Wordo Dictionary</p>
