--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@ nav {
     padding: 20px 10px;
 	text-shadow: none;
 	border-radius: 20px;
+	margin: 25px 0 75px 0;
 }
 #howtoadd a {color: blue;}
 textarea {
@@ -220,7 +221,7 @@ What did you hope to get out of getting into YC?
 How did you take the rejection?
 
 	
-How did your company went on to do without YC?
+How did your company do without YC?
 
 	
 Any interesting story regarding your company you’d like to share?
