--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ nav {
 	
 textarea {
 	width: 90%;
-	height: 300px;
+	height: 350px;
 	padding: 10px;
 }
 	
@@ -220,13 +220,17 @@ textarea {
 To add your company, just fill out this form, and copy+paste it into my Twitter DM's. I will then add your company.<br><br>
 <b>Step 1: Share your story 👇🏽</b>
 <textarea>
-What does your project or company do? (1 or 2 sentences please)
+Company Name: 
+	
+URL: 
 
+What does your project or company do? (1 or 2 sentences please)
+	
+	
+What would you have done differently during your application?
+	
 	
 What did you hope to get out of getting into YC?
-
-	
-How did you take the rejection?
 
 	
 How did your company do without YC?
