--- a/index.html
+++ b/index.html
@@ -221,21 +221,21 @@ To add your company, just fill out this form, and copy+paste it into my Twitter 
 <b>Step 1: Share your story 👇🏽</b>
 <textarea>
 Company Name: 
-	
+
 URL: 
 
 What does your project or company do? (1 or 2 sentences please)
-	
+
 	
 What would you have done differently during your application?
-	
+
 	
 What did you hope to get out of getting into YC?
 
-	
+
 How did your company do without YC?
 
-	
+
 Any interesting story regarding your company you’d like to share?
 
 </textarea>
@@ -251,14 +251,22 @@ Any interesting story regarding your company you’d like to share?
 <div class="panel">
 🔗 &nbsp; <a href="https://wor.do">https://wor.do</a>
 <br><br>
-<b>What does your company do?</b><br>
-Answer here.
-<br><br>
-<b>Any guess on why you got rejected?</b><br>
-Fascinating response here.<br><br>
+<b>What does your project or company do?</b><br>
+Wordo is a beautifully designed dictionary. It has social features, you can follow other users and get a notification when they 'like' words<br><br>
+	
 
-<b>How did you react to Y-Combinator rejecting you</b><br>
-I became suicidal.
+<b>What would you have done differently during your application?</b><br>
+Nothing. I was honest in the application, and honestly, YC was smart to reject us.<br><br>
+	
+<b>What did you hope to get out of getting into YC?</b><br>
+We didn't need funding. We just applied because we wanted to gain valuable connections and see if we'd get in. <br><br>
+	
+<b>How did your company do without YC?</b><br>
+Not good. Wordo has a handful of powerusers, and that's it. I've given up on the project long ago, and moved on to others things.<br><br>
+	
+<b>Any interesting story regarding your company you’d like to share?</b><br>
+One of our users has liked over ten thousand words on Wordo. You can check his profile here: <a href="https://wor.do/@computingfreak">https://wor.do/@computingfreak</a>
+
 </div>
 
 <p class="accordion">VEED Video</p>
