--- a/index.html
+++ b/index.html
@@ -221,23 +221,18 @@ To add your company, just fill out this form, and copy+paste it into my Twitter 
 <b>Step 1: Share your story 👇🏽</b>
 <textarea>
 Company Name: 
-
+--
 URL: 
-
+--
 What does your project or company do? (1 or 2 sentences please)
+--
 
-	
-What would you have done differently during your application?
-
-	
-What did you hope to get out of getting into YC?
-
-
-How did your company do without YC?
-
-
-Any interesting story regarding your company you’d like to share?
-
+Your Story:
+--
+Here, you can write anything you want. For inspiration, you could talk about:
+What would you have done differently?	
+What did you hope to get out of YC?
+Or anything interesting about your company or your YC application. The stage is yours 💯.
 </textarea>
 <br><br>
 <b>Step 2: Send it to me 👇🏽</b><br>
@@ -271,7 +266,7 @@ One of our users has liked over ten thousand words on Wordo. You can check his p
 
 <p class="accordion">VEED Video</p>
 <div class="panel">
-🔗 &nbsp; <a href="https://wor.do">https://wor.do</a>
+🔗 &nbsp; <a href="https://wor.do">https://veed.com</a>
 <br><br>
 <b>What does your company do?</b><br>
 Answer here.
