--- a/index.html
+++ b/index.html
@@ -230,9 +230,10 @@ What does your project or company do? (1 or 2 sentences please)
 Your Story:
 --
 Here, you can write anything you want. For inspiration, you could talk about:
+Introduce yourself.
 What would you have done differently?	
 What did you hope to get out of YC?
-Or anything interesting about your company or your YC application. The stage is yours 💯.
+Or anything interesting about you as a person, your company or your YC application. The stage is yours 💯.
 </textarea>
 <br><br>
 <b>Step 2: Send it to me 👇🏽</b><br>
