--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ Or anything interesting about you as a person, your company or your YC applicati
 <b>Step 2: Send it to me 👇🏽</b><br>
 <a href="https://twitter.com/aminozuur" target="_blank">DM me on Twitter</a> or email it to amin@eftegarie.com.
 <br><br>
-<b>Step 3 is optional, this is NOT a requirement: Add a banner to your website 👇🔥🔥</b><br>
+<b>Step 3 is optional, this is NOT a requirement: Add a banner to your website and link back to this website 🔥🔥</b><br>
 
 </div>
 	
