--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ One of our users has liked over ten thousand words on Wordo. You can check his p
 
 </div>
 
-<p class="accordion">VEED Video</p>
+<p class="accordion">Example company Inc.</p>
 <div class="panel">
 🔗 &nbsp; <a href="https://wor.do">https://veed.com</a>
 <br><br>
