--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ One of our users has liked over ten thousand words on Wordo. You can check his p
 
 <p class="accordion">Example company Inc.</p>
 <div class="panel">
-🔗 &nbsp; <a href="https://wor.do">https://veed.com</a>
+🔗 &nbsp; <a href="https://wor.do">https://example.com</a>
 <br><br>
 <b>What does your company do?</b><br>
 Answer here.
