--- a/index.html
+++ b/index.html
@@ -163,13 +163,13 @@ nav {
     background: white;
     border: 1px dashed lightgray;
 	cursor: pointer;
-	color: black;
+	color: gray;
 }
 .madeby u {
 	color: #ff6600;
 }
 
-.madeby:hover {border: 1px dashed #ff6600;}
+.madeby:hover {border: 1px dashed #888; color: black;}
 	
 .madeby:hover u {
 	color: #d04800;
