--- a/index.html
+++ b/index.html
@@ -191,6 +191,8 @@ textarea {
 	height: 350px;
 	padding: 10px;
 }
+
+h1 a {color: black; text-decoration: none;}
 	
 /* MOBILE */
 @media (max-width: 700px) {
@@ -209,7 +211,7 @@ textarea {
 }
 </style>
 
-<nav><h1>Rejected By Y-Combinator 💀</h1></nav>
+<nav><h1><a href="http://rejectedbyycombinator.com/">Rejected By Y-Combinator 💀</a></h1></nav>
 <br><br>
 <div id="container">
 <h2>Interesting stories from those who didn't make it</h2>
