--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ nav {
 .panel b {color: black;}
 
 .panel.show {
-	text-align: justify;
+	text-align: left;
 	padding: 20px 18px;
 	opacity: 1;
 	margin-top: -5px;
@@ -183,7 +183,7 @@ nav {
 	border-radius: 20px;
 	margin: 25px 0 75px 0;
 }
-	
+
 #howtoadd a {color: blue;}
 	
 textarea {
