--- a/index.html
+++ b/index.html
@@ -214,6 +214,8 @@ h1 a {color: black; text-decoration: none;}
 <nav><h1><a href="http://rejectedbyycombinator.com/">Rejected By Y-Combinator 💀</a></h1></nav>
 <br><br>
 <div id="container">
+	
+	<img src="https://rejectedbyycombinator.com/rejected-by-ycombinator.jpg" height="150">
 <h2>Interesting stories from those who didn't make it</h2>
 <small>Each year, over ten thousand people are rejected by Y-Combinator. This page is a directory that collects their stories, so that we can learn from each other.</small>	
 
