--- a/index.html
+++ b/index.html
@@ -175,7 +175,9 @@ nav {
 	color: #d04800;
 
 }
-	
+#rbyimg {
+	height: 200px;
+}
 #howtoadd {
 	background: palegreen;
     padding: 20px 10px;
@@ -207,6 +209,7 @@ h1 a {color: black; text-decoration: none;}
 	.madeby {zoom: 0.7;}
 	
 	.panel.show {margin-left: -20px;}
+	#rbyimg {height: 100px;}
 	
 }
 </style>
@@ -215,7 +218,7 @@ h1 a {color: black; text-decoration: none;}
 <br><br>
 <div id="container">
 	
-	<img src="https://rejectedbyycombinator.com/rejected-by-ycombinator.jpg" height="200">
+	<img src="https://rejectedbyycombinator.com/rejected-by-ycombinator.jpg" id="rbyimg"><br><br>
 <h2>Interesting stories from those who didn't make it</h2>
 <small>Each year, over ten thousand people are rejected by Y-Combinator. This page is a directory that collects their stories, so that we can learn from each other.</small>	
 
