--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@ h1 a {color: black; text-decoration: none;}
 	.madeby {zoom: 0.7;}
 	
 	.panel.show {margin-left: -20px;}
+	
 	#rbyimg {height: 100px;}
 	
 }
@@ -218,7 +219,7 @@ h1 a {color: black; text-decoration: none;}
 <br><br>
 <div id="container">
 	
-	<img src="https://rejectedbyycombinator.com/rejected-by-ycombinator.jpg" id="rbyimg"><br><br>
+	<a href="https://rejectedbyycombinator.com/rejected-by-ycombinator.jpg"><img src="https://rejectedbyycombinator.com/rejected-by-ycombinator.jpg" id="rbyimg"></a><br><br>
 <h2>Interesting stories from those who didn't make it</h2>
 <small>Each year, over ten thousand people are rejected by Y-Combinator. This page is a directory that collects their stories, so that we can learn from each other.</small>	
 
