--- a/index.html
+++ b/index.html
@@ -225,7 +225,12 @@ h1 a {color: black; text-decoration: none;}
 
 <div class="company" id="add" onclick="submitToggle()">Submit your story</div><br>
 <div id="howtoadd">
-To add your company, just fill out this form, and copy+paste it into my Twitter DM's. I will then add your company.<br><br>
+To add your company, just fill out this form, 
+and copy+paste it into my <a href="https://twitter.com/aminozuur" target="_blank">Twitter DM's</a>. 
+I will then add your company. <br>
+If you are too lazy to write it, 
+I can do a short 5 minute voicecall with you, 
+and I'll write it out, just <a href="https://twitter.com/aminozuur" target="_blank">DM me</a> to set it up.<br><br>
 <b>Step 1: Share your story 👇🏽</b>
 <textarea>
 Company Name: 
